Не стал париться с Asp.Net core, написал все через swagger(

--- a/3/Client/View/Pages/Index.cshtml
+++ b/3/Client/View/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 @{
     ViewData["Title"] = "Home page";
 }
-<p>Сервису отправлен дефолтный текст. Его можно изменить, отправив get запрос, но поменяеться только счетчик, пример текста и это сообщение останется!</p>
+<p>Сервису отправлен дефолтный текст. Его можно изменить, отправив get запрос</p>
 @{
     foreach (string word in Model.dict.Keys) 
     {
