--- a/FrontEnd/1/style.css
+++ b/FrontEnd/1/style.css
@@ -106,8 +106,13 @@ td {
         /* background-image: url("src/img/back2.png");
         background-repeat: no-repeat; */
         background-size: 100%;
-        padding: 3%;
+        padding: 2%;
     }
+    #about_header {
+        padding-left: 3%;
+        font-size: 3vw;
+    }
+
     #mobile_back {
         position: fixed;
         padding: 0;
@@ -119,6 +124,9 @@ td {
     }
     #about {
         padding: 3%;
+        padding-bottom: 10px;
+        font-size: 2.4vw;
+
     }
     .opinion {
         padding-top: 10px;
