--- a/FrontEnd/js task/style.css
+++ b/FrontEnd/js task/style.css
@@ -160,7 +160,7 @@ td {
     border-width: 1vw;
     border-color: red;
     border-radius: 3px;
-    width: 15vw`;
+    width: 15vw;
     height: 10vw;
     text-align: center;
     font-size: 5vw;
